tests/snapshots/cli__reference_files@unary__21.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/21.unary
---
status: 0
stdout:
  - "3190"
stderr: []
