tests/snapshots/cli__reference_files@unary__23.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/23.unary
---
status: 0
stdout:
  - "46469326591824.67"
stderr: []
