tests/snapshots/cli__reference_files@unary__25.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/25.unary
---
status: 0
stdout:
  - "1650621762180522800"
stderr: []
