tests/snapshots/cli__reference_files@unary__4.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/4.unary
---
status: 0
stdout:
  - "1410.3"
stderr: []
