tests/snapshots/cli__reference_files@unary__5.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/5.unary
---
status: 0
stdout:
  - "2.76"
stderr: []
