tests/snapshots/cli__reference_files@unary__6.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/6.unary
---
status: 0
stdout:
  - "inf"
stderr: []
