tests/snapshots/cli__reference_files@unary__8.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/8.unary
---
status: 0
stdout:
  - "inf"
stderr: []
